# rust-actix-api

./: .env  Cargo.toml  docker-compose.yml
http/: api.http
migrations/: 20240103175037_init.up.sql
src/: main.rs  model.rs  schema.rs  services.rs
